# collapse-dynamics

./: .gitignore  README.md  job.sh  pyproject.toml  train.py  visualize.ipynb
config/: train.yaml
config/dataset/: agnews.yaml  cifar10.yaml  fashionmnist.yaml  mnist.yaml  sst2.yaml  trec.yaml
config/model/: resnet.yaml  toy_cnn.yaml  toy_mlp.yaml  toy_transformer.yaml
config/optimizer/: adamw.yaml  sgd.yaml
src/: dataset.py  neural_collapse.py  representation.py  text_dataset.py
src/information_plane/: mi_estimation.py  mi_estimation_compression.py  nhsic.py
src/information_plane/compression/: autoencoder.py  kl_estimator.py  train_autoencoder.py
src/models/: embedding.py  resnet.py  toy_cnn.py  toy_mlp.py  transformer.py  utils.py
