[project]
name = "collapse-dynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",  # undocumented
]
unfixable = [
    "F401",  # unused document
    "F841",  # unused variable
]
